--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "webpack-dev-server": "^4.13.2"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.2"
+    "react-router-dom": "^6.14.2",
+    "zustand": "^4.4.7"
   }
 }
